@@ -2,5 +2,5 @@ EBUILD cl-kde-meta-4.4.4-r1.ebuild 3754 RMD160 8b9245fcf0c1f67d88d9799f912a5f553
 EBUILD cl-kde-meta-4.5.1-r4.ebuild 3895 RMD160 bf8db31f93eb17ab48fa96449c0ae21e92f3f688 SHA1 75be6ca244b5974f8f0b396db5fbf4d832cdc409 SHA256 5c16ee9e9c66b9133d30baf4515e6d39d42066f45b8a6b4a68703ac0e9f37c2e
 EBUILD cl-kde-meta-4.6.0-r3.ebuild 6307 RMD160 8403006a9f858ee8a4d9fe3dcd37e8c18ba26c50 SHA1 2d32e65a6c9257e52e324a28911c0b5db73d234c SHA256 2677e66916820452bcfa9a03c38eaba4bebc167191875116421169d4301e29b2
 EBUILD cl-kde-meta-4.6.0-r4.ebuild 6258 RMD160 273a320a64972c1251a2bd52f79620e6232451ea SHA1 983dbf0092635c09028cd446c20c561049b76eae SHA256 665530016cafb9974d13051a386b253137e80c4e51c77ae9aeb774f479520b52
-EBUILD cl-kde-meta-4.7.0.ebuild 6423 RMD160 da355999865cbc6918b9e6053809d94dc2f9a7ec SHA1 e29e04d604630a77c04e4f8cd6aa7b701d012dd7 SHA256 4d60886c39e650dbe09103934ebd034a8006eac61ebfee8d4dfbedb54b155591
-MISC ChangeLog 2278 RMD160 5ffd6fcd21817402a3d73a7eae81dd21d97cd12e SHA1 26a1e8f3725d8c7f9a315e1cbadbc8de1bd2fcc0 SHA256 8426144379a773411336a504563bbcb69ea5330eccd37d0a4c6bed7180b0d354
+EBUILD cl-kde-meta-4.7.0-r1.ebuild 6423 RMD160 da355999865cbc6918b9e6053809d94dc2f9a7ec SHA1 e29e04d604630a77c04e4f8cd6aa7b701d012dd7 SHA256 4d60886c39e650dbe09103934ebd034a8006eac61ebfee8d4dfbedb54b155591
+MISC ChangeLog 2467 RMD160 016c11ad49599ecbe62b02e61e279c4cc1492819 SHA1 f24c4d9e93b8af38bf63b04db5e480be6a0f0285 SHA256 dfe54441cee6182fc0d0879ba56237a9fef45a426e484d8cfe40a5d51c9cc0ea
