@@ -1,12 +1,0 @@
-DIST kde-l10n-bg-4.4.5.tar.bz2 2112721 RMD160 846040993c10a4d075000ba5dece25df8faf9c6f SHA1 12758687384de09ea8ba8ae8f5b4460ed2879cab SHA256 214c62e32d7fde793275c9b52813839c48bb181312c038068ca5a4b1d9a2d48c
-DIST kde-l10n-de-4.4.5.tar.bz2 21841433 RMD160 7cf873b5c2402e17c468467c3c1ec2681c189a62 SHA1 6dcc6252adaa8a799a854f855221f2c86bcb8f56 SHA256 bd5c2647b26c2e5bdb71c69e0d23929867ca922c060dd61146c4cc3172d6c214
-DIST kde-l10n-es-4.4.5.tar.bz2 28643479 RMD160 3a77e9db3ae8f82f1aff4fbb8d8a4b8ea1729aeb SHA1 7d4a20e2c477486e2551559c98e1fd04ad39004e SHA256 2b422a45765a5b5abf8697a8730434eceef3046d53b95d1a3bd7683f5b6e8d3a
-DIST kde-l10n-fr-4.4.5.tar.bz2 22595114 RMD160 ab023f2277b92e78652f3bc8102ddf5aac80a00a SHA1 bc82eec7be3fbfa6def91993aed84732d4655b30 SHA256 7e0fe1f35375ef0d261e7dd616dcbf9850229db66ce4be40c95a6694bfa91f27
-DIST kde-l10n-it-4.4.5.tar.bz2 11339894 RMD160 9cd0ec7b31ab67f7c88bb7bf375d99fd2d1c83e7 SHA1 70b4a311f6f9d472878c730804ebc47c3092c6ae SHA256 b906a97d071967816d460d11c28273a9adf14f6a96d5978c2905f6794b0af4a9
-DIST kde-l10n-pl-4.4.5.tar.bz2 6149268 RMD160 5e41dc78f19b77e45edf370fd3702cbdd4822b0b SHA1 40149ae0d8acfbbd65a948f786d11903a6a77565 SHA256 2ef854306bb58f6043f1361d93437ae2ed8cf71cf54e0518f60e4d20401b06f7
-DIST kde-l10n-pt_BR-4.4.5.tar.bz2 17672341 RMD160 7c3a9d066a89ec639487a6529f7d8cd9156cc364 SHA1 b1d772c6a97d387d6eb287dc6550641fc3dbe791 SHA256 6a39e3be25a5d9b923ff2f42d0e7a6ab86831ec8f6d506b26d7e7ba14f2b9eb0
-DIST kde-l10n-ru-4.4.5.tar.bz2 6429198 RMD160 63f359f69ed3c729244d6c0afad78a231336c5e8 SHA1 6d66712a040bd1e73098a1ee3b1146b7dc21a1a5 SHA256 5b177410efdd1109cb3ec339b9b7e88fd402a257990ba48664608b3948aadc27
-DIST kde-l10n-uk-4.4.5.tar.bz2 13957369 RMD160 8432e459af78e494af12eaf388fa3877581348c8 SHA1 afe7cd9305030d1d3112fdb20d7a36769ef08862 SHA256 a279b785fc8e0820e4a1cd7f9ded9833f348c53dd5b6cf87df9bc8b7c60b65c6
-EBUILD kdepim-l10n-4.4.5.ebuild 2230 RMD160 cb76b4740884e118dd8d526e1e2d41bc516f0f50 SHA1 984b0d0a340413d28afff8b52ce184418543bc96 SHA256 1c494ecf5368b3167b58b3655bba140ad64dad416dceaa226c7aeb851a4b3cd2
-MISC ChangeLog 292 RMD160 51df91aa74c5d7045fa8923513de7b290ffabda7 SHA1 cf999d8a901af9d08006bfc7e49f60024a868a4b SHA256 5b305519f6adef362b5ed569425eb554e89cb0f0ae3d7ceb4d9d5b773ecb6b66
-MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
