@@ -1,10 +1,0 @@
-# ChangeLog for kde-base/kdepim-l10n
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: $
-
-*kdepim-l10n-4.4.5 (17 Dec 2010)
-
-  17 Dec 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
-  +kdepim-l10n-4.4.5.ebuild, +metadata.xml:
-  Add localization for kde pim.
-
